docs:added tcp usecases, fixed mobile issue

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -241,6 +241,11 @@ Subdomain: <span class="hl-yellow">myapp</span>
                 <p>Access IoT dashboards or Raspberry Pi projects from anywhere.</p>
                 <span class="case-link">Read guide</span>
             </a>
+            <a href="docs/tcp.html" class="case-card">
+                <h3>TCP Services</h3>
+                <p>Expose SSH, FTP, Databases, and Game Servers via TCP tunneling.</p>
+                <span class="case-link">Read guide</span>
+            </a>
             <a href="docs/self-hosting.html" class="case-card">
                 <h3>Self-Hosted Alternative</h3>
                 <p>Replace ngrok with your own infrastructure. Zero recurring costs.</p>
@@ -298,7 +303,7 @@ python client_cli.py tcp</code></pre>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>Built by Yash Patil, Sairaj Pai & Nandini Nichite</p>
+            <p>Built by Yash Patil & Sairaj Pai</p>
         </div>
     </footer>
 
